# promptgenie

./: .coverage  .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .promptgenie.yaml.example  .promptignore  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  pyproject.toml  setup.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  prompt-check.yml  release.yml  scorecard.yml
docs/: commands.md  configuration.md  registry-design.md
examples/: auth-refactor.md  auth-refactor.prompt-test.yaml  secure-login.workflow.yaml
promptgenie/: __init__.py  cli.py  models.py
promptgenie/commands/: adapt.py  analyze.py  audit.py  auth.py  benchmark.py  ci.py  completion.py  compress.py  config_cmd.py  context.py  diff.py  doctor.py  eval_cmd.py  evaluate.py  fmt_cmd.py  generate.py  graph_cmd.py  history_cmd.py  interactive.py  lint.py  lock_cmd.py  make_cmd.py  output_cmd.py  pack.py  palette_cmd.py  plugin_cmd.py  policy.py  provider.py  redact.py  redteam.py  registry_cmd.py  run.py  scan.py  spec.py  targets.py  template_cmd.py  test.py  tokens_cmd.py  trust.py  tui_cmd.py  (+6 more)
promptgenie/context-packs/: cyber-security-team.yaml  django-rest-api.yaml  react-supabase-app.yaml
promptgenie/core/: adapter.py  analyze.py  artifact.py  audit.py  baseline.py  benchmarker.py  change_detector.py  ci.py  compressor.py  config.py  context_builder.py  context_packs.py  credentials.py  differ.py  errors.py  eval_suite.py  evaluator.py  event_bus.py  event_formatters.py  events.py  fileio.py  formatter.py  formatters.py  generator.py  gh_reporter.py  graph.py  history.py  history_db.py  input_handler.py  linter.py  llm_analyzer.py  lockfile.py  make.py  output_contract.py  pack_signing.py  plugin.py  policy_engine.py  providers.py  redactor.py  redteam.py  (+15 more)
promptgenie/profiles/: chatgpt.yaml  claude-code.yaml  claude.yaml  cursor.yaml  gemini.yaml  hermes.yaml
promptgenie/registry/: index.yaml
promptgenie/registry/packs/: ai-safety-context.yaml  customer-support-templates.yaml  data-science-templates.yaml  devops-templates.yaml  enterprise-lint.yaml  github-copilot.yaml  gpt-4o.yaml  legal-compliance-templates.yaml  llama3.yaml  mistral.yaml  owasp-llm-top10.yaml  product-management-templates.yaml  regulated-industries-context.yaml  responsible-ai-context.yaml
promptgenie/renderers/: rich.py
promptgenie/schemas/: prompt-manifest.schema.json  promptspec.schema.json  workspace.schema.json
promptgenie/templates/: cyber_templates.yaml
scripts/: check_version_drift.py
tests/: conftest.py  test_adapter.py  test_benchmark_cmd.py  test_benchmarker.py  test_ci_core.py  test_ci_coverage_boost.py  test_cli.py  test_cli_commands.py  test_completion.py  test_compress.py  test_context_builder.py  test_context_compression.py  test_context_packs.py  test_context_packs_full.py  test_coverage_boost2.py  test_coverage_boost3.py  test_coverage_boost4.py  test_coverage_boost5.py  test_coverage_boost6.py  test_coverage_boost7.py  test_coverage_gaps.py  test_diff_render.py  test_differ.py  test_differ_extended.py  test_doctor.py  test_errors.py  test_events.py  test_fileio.py  test_formatter.py  test_formatters.py  test_generator.py  test_graph.py  test_hermes.py  test_history_privacy.py  test_linter.py  test_make.py  test_models.py  test_output_contract.py  test_pack_init_location.py  test_pack_none_field.py  (+33 more)
tests/cassettes/: anthropic_haiku.json
tests/fixtures/: bad_agentic.md  good_agentic.md  injection.md  secrets.md
vscode-extension/: .eslintrc.json  .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: diagnostics.ts  extension.ts  runner-utils.ts  runner.ts  statusBar.ts  types.ts
vscode-extension/src/test/: runner.test.ts
