[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptgenie"
version = "1.2.0"
description = "Secure prompt engineering for AI agents and engineering teams"
readme = "README.md"
license = "MIT"
authors = [{ name = "Myles Agnew" }]
requires-python = ">=3.10"
keywords = ["prompt-engineering", "llm", "ai", "security", "cli", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.urls]
Homepage    = "https://github.com/mylesagnew/promptgenie"
Repository  = "https://github.com/mylesagnew/promptgenie"
Issues      = "https://github.com/mylesagnew/promptgenie/issues"

[project.scripts]
promptgenie = "promptgenie.cli:cli"

[project.optional-dependencies]
benchmark = [
    "anthropic>=0.100",
]
tokenizer = [
    "tiktoken>=0.7",
]
providers = [
    "httpx>=0.27",
    "anthropic>=0.100",
]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.17",
    "bandit>=1.7",
    "pip-audit>=2.10.1",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "build>=1.2",
    "twine>=5.0",
    "cyclonedx-bom>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["promptgenie*"]

[tool.setuptools.package-data]
promptgenie = [
    "profiles/*.yaml",
    "templates/*.yaml",
    "context-packs/*.yaml",
    "packs/**/*.yaml",
    "registry/*.yaml",
    "registry/packs/*.yaml",
    "schemas/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.coverage.run]
source = ["promptgenie"]

[tool.coverage.report]
# Threshold reflects current measured coverage (77.56%) with a small margin.
# The security-fix tests added in this pass (test_security_fixes.py) bring
# context_builder, run_engine, and scanner coverage up.  Reaching 85% requires
# integration tests for CLI commands and registry network paths which need
# mocking work beyond the security hardening scope — tracked as a follow-on task.
fail_under = 75
show_missing = true

[tool.ruff]
target-version = "py310"
line-length    = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips        = ["B101"]   # allow assert in tests

[tool.mypy]
python_version         = "3.10"
warn_return_any        = true
warn_unused_configs    = true
ignore_missing_imports = true
