[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptgenie"
version = "1.7.0"
description = "Secure prompt engineering for AI agents and engineering teams"
readme = "README.md"
license = "MIT"
authors = [{ name = "Myles Agnew" }]
requires-python = ">=3.10"
keywords = ["prompt-engineering", "llm", "ai", "security", "cli", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.urls]
Homepage    = "https://github.com/mylesagnew/promptgenie"
Repository  = "https://github.com/mylesagnew/promptgenie"
Issues      = "https://github.com/mylesagnew/promptgenie/issues"

[project.scripts]
promptgenie = "promptgenie.cli:cli"

[project.optional-dependencies]
benchmark = [
    "anthropic>=0.100",
]
tokenizer = [
    "tiktoken>=0.7",
]
providers = [
    "httpx>=0.27",
    "anthropic>=0.100",
]
tui = [
    "textual>=0.50",
]
watch = [
    "watchfiles>=0.21",
]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.17",
    "bandit>=1.7",
    "pip-audit>=2.10.1",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "build>=1.2",
    "twine>=5.0",
    "cyclonedx-bom>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["promptgenie*"]

[tool.setuptools.package-data]
promptgenie = [
    "profiles/*.yaml",
    "templates/*.yaml",
    "context-packs/*.yaml",
    "packs/**/*.yaml",
    "registry/*.yaml",
    "registry/packs/*.yaml",
    "schemas/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.coverage.run]
source = ["promptgenie"]

[tool.coverage.report]
# Measured coverage is ~83%. On top of the async-provider harness and command
# coverage, test_tui.py drives the Textual TUI headlessly via app.run_test()
# (tui_cmd.py 12% -> 89%; needs the [tui] extra, now installed in the CI test
# job) and test_benchmark_cmd.py covers the benchmark command via a fake
# provider. The last points to 85% are the watch loop and remaining edges.
# Gate set with margin below the measured value.
fail_under = 82
show_missing = true

[tool.ruff]
target-version = "py310"
line-length    = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips        = ["B101"]   # allow assert in tests

[tool.mypy]
python_version         = "3.10"
warn_return_any        = true
warn_unused_configs    = true
ignore_missing_imports = true
